Changed logo from SVG to PNG

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="navbar-wrapper">
           <div class="logo">
-            <a href="#"><img src="assets/logo.svg" alt="wild bill's logo" /></a>
+            <a href="#"><img src="assets/logo.png" alt="wild bill's logo" /></a>
           </div>
           <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -497,7 +497,7 @@
       </div>
     </section>
 <footer class="footer">
-  <img src="assets/logo.svg">
+  <img src="assets/logo.png">
   <hr>
   <div class="leftsidefooter">
     <div class="phonefooter">
