--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Wild Bill's is a delicious, quick eat, American food restaurant located in Leadville, Colorado.">
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;700&family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
