Fixed typos under "sandwiches"

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <h4>Reuben Sandwich</h4>
               <p class="price">12.99</p>
             </div>
-            <p class="desc">Pastrami, Sauerkraut, Swiss Cheese, & Thousand Island Engine</p>
+            <p class="desc">Pastrami, Sauerkraut, Swiss Cheese, & Thousand Island Dressing</p>
           </div>
           <div class="sandwichthree">
             <div class="menu-item-flex">
@@ -223,14 +223,14 @@
               <h4>Grilled Ham & Cheese</h4>
               <p class="price">$10.99</p>
             </div>  
-            <p class="desc">Ham & Cheese</p>
+            <p class="desc">Texas Toast with a choice of American, Swiss, Pepper Jack, or Cheddar Cheese</p>
           </div>
           <div class="sandwichfive">
             <div class="menu-item-flex">
               <h4>Grilled Cheese</h4>
               <p class="price">$10.99</p>
             </div>  
-            <p class="desc">Cheese</p>
+            <p class="desc">Texas Toast with a choice of American, Swiss, Pepper Jack, or Cheddar Cheese</p>
           </div>
         </div>
       </div>
