Fixed "menu" btn & a typo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="navbar-wrapper">
           <div class="logo">
-            <a href="#"><img src="assets/logo.png" alt="wild bill's logo" /></a>
+            <a href="#menu"><img src="assets/logo.png" alt="wild bill's logo" /></a>
           </div>
           <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -124,7 +124,7 @@
             <div class="headerflex">
               <img src="assets/bellybuster.png" alt="belly buster burger">
                 <h3 id="menu">Burger Baskets</h3>
-                <p class="burgerdesc">1/3 LB, 100% Beef burger with fries combo meal</p>
+                <p class="burgerdesc">1/3 LB, 100% Beef burger with fries</p>
             </div>
           </div>
         </div>
