Added "Green Chili Burger"

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
           </div>
           <p class="desc">Guacamole, Lettuce, Tomato, & Ketchup</p>
         </div>
+        <div class="greenchili">
+          <div class="menu-item-flex">
+            <h4>GREEN CHILI BURGER</h4>
+            <p class="price">$11.99</p>
+          </div>
+          <p class="desc">Smothered in Green Chili, Cheese, & Onions</p>
+        </div>
         <div class="texaschili">
           <div class="menu-item-flex">
             <h4>TEXAS CHILI BURGER</h4>
