--- a/index.html
+++ b/index.html
@@ -335,6 +335,12 @@
               </div>
               <p class="desc"></p>
             </div>
+            <div class="sidethreepointfive">
+                <div class="menu-item-flex">
+                <h4>Add Texas Chili or Green Chili Cheese Fries</h4>
+                <p class="price">$2.75</p>
+              </div>
+              <p class="desc"></p>
             <div class="sidefour">
                 <div class="menu-item-flex">
                 <h4>Sweet Potato Fries</h4>
