Replaced listed milkshake flavors

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <h4>Milk Shakes</h4>
                     <p class="price"></p>
                   </div>
-                  <p class="desc">Small $2.99 - Large $4.29 - Vanilla - Chocolate - Strawberry - Black Raspberry - Cherry - Coffee - Pineapple - Banana</p>
+                  <p class="desc">Small $2.99 - Large $4.29 - Over 25 flavors!</p>
              </div>
 
               </div>
